Revert "using commons-codec base64"
This reverts commit 2b168272dad47ca531ebe2252aaec5a830d54281.